# eupt_vid

./: .gitignore  Makefile  README.md  pyproject.toml  run_repro.py
demos/: Dockerfile  index.html
reports/: experiment_logger.md  notes.md
scripts/: eval_all.py  eval_perovaz.py  eval_quantization.py  f1_issue.py  filter_fineweb.py  filter_fineweb_rs.py  pos_tagger.py  run_repro.py  train_fasttext.py  upload_hf.py  veracruz_download.py
src/: pr_curve.py  train_full.py  train_journalistic.py  train_veracruz.py  train_veracruz_optimized.py
src/eupt_vid/: __main__.py  fasttext.py  run_model.py  utils.py
src/eupt_vid/pipelines/: eval_quantization.py  train_full.py  train_paper_data.py  train_veracruz_optimized.py
