[project]
name = "eupt-vid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "duarteocarmo", email = "me@duarteocarmo.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
eupt-vid = "eupt_vid:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eupt_vid"]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]

[tool.deptry]
exclude = ["\\.venv", "reproduce\\.py", "run_repro\\.py"]

[tool.deptry.per_rule_ignores]
DEP003 = ["eupt_vid"]
